@@ -157,7 +157,8 @@ xymon (4.4.0-alpha5) unstable; urgency=low
    * Multiple RRD 'DS' entries can now be applied at once to a status.
    * Trends pages should display all configured 'TRENDS' graphs, including when
      names are partial matches of other graph configurations (Thanks, Jeremy Laidman)     
-
+   * Add --noexec option to logfetch to ignore commands to dynamically list files. 
+     (Suggested by Jeremy Laidman)
 
  -- Henrik Stoerner <henrik@hswn.dk>  Sun, 22 Nov 2015 18:26:21 +0100
 
