@@ -156,6 +156,8 @@ Changes from 4.3.x -> 4.4-alpha
 * Multiple RRD 'DS' entries can now be applied at once to a status.
 * Trends pages should display all configured 'TRENDS' graphs, including when
   names are partial matches of other graph configurations (Thanks, Jeremy Laidman)
+* Add --noexec option to logfetch to ignore commands to dynamically list files.
+  (Suggested by Jeremy Laidman)
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
